17-todo example part2

--- a/public/css/primitiveui.css
+++ b/public/css/primitiveui.css
@@ -754,9 +754,9 @@ button,
 [type='button'] {
   -webkit-appearance: none;
   display: inline-block;
-  border: 1px solid #0366ee;
+  border: 1px solid #F77A25;
   border-radius: 4px;
-  background: #0366ee;
+  background: #F77A25;
   color: #ffffff;
   font-weight: 600;
   font-family: -apple-system, BlinkMacSystemFont, Helvetica Neue, Helvetica,
