--- a/src/index.css
+++ b/src/index.css
@@ -87,7 +87,7 @@ section h1 {
 
 .button {
   display: inline-block;
-  background: #1976d2;
+  background: #F77A25;
   color: white;
   border-radius: 4px;
   font-weight: 700;
